[project]
name = "social-control-center"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "anthropic>=0.28.0",
  "python-dotenv>=1.0.0",
  "sqlalchemy>=2.0.0",
  "python-multipart>=0.0.9",
  "psycopg2-binary>=2.9.9",
]

[tool.uv]
required-environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
  "sys_platform == 'darwin'",
]
